force-app/main/default/objects/Opportunity/fields/Has_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Activity__c</fullName>
    <formula>NOT(ISNULL(LastActivityDate))</formula>
    <label>Has Activity</label>
    <type>Checkbox</type>
</CustomField>