force-app/main/default/objects/Opportunity/fields/Has_Relocation_Team__c.field-meta.xml
<CustomField>
    <fullName>Has_Relocation_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Relocation Team</label>
    <type>Checkbox</type>
</CustomField>