force-app/main/default/objects/Opportunity/fields/Huddle__c.field-meta.xml
<CustomField>
    <fullName>Huddle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we completed a huddle with this team, this year</description>
    <label>Huddle</label>
    <type>Checkbox</type>
</CustomField>