force-app/main/default/objects/Opportunity/fields/IHR_Partner__c.field-meta.xml
<CustomField>
    <fullName>IHR_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IHR Partner</label>
    <type>Checkbox</type>
</CustomField>