force-app/main/default/objects/Opportunity/fields/IHR_Power_Market__c.field-meta.xml
<CustomField>
    <fullName>IHR_Power_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IHR Power Market</label>
    <type>Checkbox</type>
</CustomField>