force-app/main/default/objects/Opportunity/fields/Implementation_Details__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Details__c</fullName>
    <label>Implementation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>