force-app/main/default/objects/Opportunity/fields/Implementation_Pace__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Pace__c</fullName>
    <description>Picklist used for B2B Oppty</description>
    <label>Implementation Pace</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Time</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>