force-app/main/default/objects/Opportunity/fields/Incumbent_Provider__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Provider__c</fullName>
    <inlineHelpText>Previous mortgage provider/vendor</inlineHelpText>
    <label>Incumbent Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>