force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Bank/Financial Institution</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Financial Wellness</fullName>
            </value>
            <value>
                <fullName>Fin Tech</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Home Services</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Online Retailer</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Rental Services</fullName>
            </value>
            <value>
                <fullName>Transportation Services</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>