force-app/main/default/objects/Opportunity/fields/Internal_Implementation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Internal_Implementation_Complete__c</fullName>
    <description>Date the internal Client Services, Banking, etc. implementation been completed?</description>
    <label>Internal Implementation Complete</label>
    <type>Date</type>
</CustomField>