force-app/main/default/objects/Opportunity/fields/Internal_Perks_Posting__c.field-meta.xml
<CustomField>
    <fullName>Internal_Perks_Posting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intranet Posting</label>
    <type>Checkbox</type>
</CustomField>