force-app/main/default/objects/Opportunity/fields/Is_My_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Opportunity__c</fullName>
    <description>Formula field to determine if logged in user is either the account executive, account manager or owner of the opportunity.</description>
    <formula>IF(
OR( 
$User.Id = OwnerId, 
$User.Id = Account_Executive__r.Id, 
$User.Id = Account_Manager__r.Id 
), 
True, 
False 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If logged in user the account manager, account executive or owner.</inlineHelpText>
    <label>Is My Opportunity</label>
    <type>Checkbox</type>
</CustomField>