force-app/main/default/objects/Opportunity/fields/ISM_Books_Sent__c.field-meta.xml
<CustomField>
    <fullName>ISM_Books_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISM Books Sent</label>
    <type>Checkbox</type>
</CustomField>