force-app/main/default/objects/Opportunity/fields/ISM_Books_Sent_Details__c.field-meta.xml
<CustomField>
    <fullName>ISM_Books_Sent_Details__c</fullName>
    <label>ISM Books Sent Details</label>
    <type>TextArea</type>
</CustomField>