force-app/main/default/objects/Opportunity/fields/Last_Partner_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Partner_Status_Change_Date__c</fullName>
    <label>Last Partner Status Change Date</label>
    <type>DateTime</type>
</CustomField>