force-app/main/default/objects/Opportunity/fields/Last_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_Date__c</fullName>
    <label>Last Status Change Date</label>
    <type>DateTime</type>
</CustomField>