force-app/main/default/objects/Opportunity/fields/Last_Status_Change_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_User__c</fullName>
    <label>Last Status Change User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>