force-app/main/default/objects/Opportunity/fields/Lead_Receipt_Method__c.field-meta.xml
<CustomField>
    <fullName>Lead_Receipt_Method__c</fullName>
    <label>Lead Receipt Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Authorization</fullName>
            </value>
            <value>
                <fullName>Call-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>