force-app/main/default/objects/Opportunity/fields/Lead_Submission_Format__c.field-meta.xml
<CustomField>
    <fullName>Lead_Submission_Format__c</fullName>
    <label>Lead Submission Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Spreadsheet</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>