force-app/main/default/objects/Opportunity/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>