force-app/main/default/objects/Opportunity/fields/Logo_Location__c.field-meta.xml
<CustomField>
    <fullName>Logo_Location__c</fullName>
    <label>Logo Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>