force-app/main/default/objects/Opportunity/fields/Logo_Used__c.field-meta.xml
<CustomField>
    <fullName>Logo_Used__c</fullName>
    <label>Logo Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QL</fullName>
            </value>
            <value>
                <fullName>QL Stacked</fullName>
            </value>
            <value>
                <fullName>QL NMLS#</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>