force-app/main/default/objects/Opportunity/fields/Lunch_and_Learn__c.field-meta.xml
<CustomField>
    <fullName>Lunch_and_Learn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we done a lunch and learn with this team yet, this year</description>
    <label>Lunch and Learn</label>
    <type>Checkbox</type>
</CustomField>