force-app/main/default/objects/Opportunity/fields/Lunch_Learn__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Learn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we present an educational seminar for their employees?</inlineHelpText>
    <label>Lunch &amp; Learn</label>
    <type>Checkbox</type>
</CustomField>