force-app/main/default/objects/Opportunity/fields/Lunch_Learn_Details__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Learn_Details__c</fullName>
    <label>Lunch &amp; Learn Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>