force-app/main/default/objects/Opportunity/fields/Mailer__c.field-meta.xml
<CustomField>
    <fullName>Mailer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailer</label>
    <type>Checkbox</type>
</CustomField>