force-app/main/default/objects/Opportunity/fields/Managed_or_Non_Managed__c.field-meta.xml
<CustomField>
    <fullName>Managed_or_Non_Managed__c</fullName>
    <label>Managed or Non-Managed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed</fullName>
                <default>true</default>
                <label>Managed</label>
            </value>
            <value>
                <fullName>Non-Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>