force-app/main/default/objects/Opportunity/fields/Market_Manager_Region__c.field-meta.xml
<CustomField>
    <fullName>Market_Manager_Region__c</fullName>
    <formula>TEXT(Account_Executive__r.Region__c)</formula>
    <label>Market Manager Region</label>
    <type>Text</type>
</CustomField>