force-app/main/default/objects/Opportunity/fields/Marketable_Population__c.field-meta.xml
<CustomField>
    <fullName>Marketable_Population__c</fullName>
    <description>the number of employees we can market to</description>
    <label>Audience Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>