force-app/main/default/objects/Opportunity/fields/Marketing_Program_Lead__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>