force-app/main/default/objects/Opportunity/fields/Marketing_ProgramLead__c.field-meta.xml
<CustomField>
    <fullName>Marketing_ProgramLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Program Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>