force-app/main/default/objects/Opportunity/fields/Marketing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tier__c</fullName>
    <label>Marketing Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 0</fullName>
                <label>DIAMOND Tier</label>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>FOCUS Tier 0</fullName>
            </value>
            <value>
                <fullName>FOCUS Tier 1</fullName>
            </value>
            <value>
                <fullName>FOCUS Tier 2</fullName>
            </value>
            <value>
                <fullName>FOCUS Tier 3</fullName>
            </value>
            <value>
                <fullName>FOCUS Tier 4</fullName>
            </value>
            <value>
                <fullName>FOCUS Tier 5</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>