force-app/main/default/objects/Opportunity/fields/Meeting_Fees__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Fees__c</fullName>
    <label>Meeting Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>