force-app/main/default/objects/Opportunity/fields/Members_w_Email__c.field-meta.xml
<CustomField>
    <fullName>Members_w_Email__c</fullName>
    <label>Members w/ Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>