force-app/main/default/objects/Opportunity/fields/Membership_Base__c.field-meta.xml
<CustomField>
    <fullName>Membership_Base__c</fullName>
    <label>Membership Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>