force-app/main/default/objects/Opportunity/fields/Membership_Dues__c.field-meta.xml
<CustomField>
    <fullName>Membership_Dues__c</fullName>
    <label>Membership Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>