force-app/main/default/objects/Opportunity/fields/MSA_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>MSA_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA Auto-Renew?</label>
    <type>Checkbox</type>
</CustomField>