force-app/main/default/objects/Opportunity/fields/MSA_confirm_marketing__c.field-meta.xml
<CustomField>
    <fullName>MSA_confirm_marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA confirm marketing?</label>
    <type>Checkbox</type>
</CustomField>