force-app/main/default/objects/Opportunity/fields/MSA_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>MSA_Monthly_Amount__c</fullName>
    <label>MSA Monthly Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>