force-app/main/default/objects/Opportunity/fields/MSA_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Renewal_Date__c</fullName>
    <label>MSA Renewal Date</label>
    <type>Date</type>
</CustomField>