force-app/main/default/objects/Opportunity/fields/MSA_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>MSA_Total_Amount__c</fullName>
    <label>MSA Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>