force-app/main/default/objects/Opportunity/fields/My_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>My_Opportunity__c</fullName>
    <formula>IF( OR( 
Account_Executive__r.Alias = $User.Alias,
Account_Manager__r.Alias = $User.Alias, 
Secondary_Account_Manager__r.Alias = $User.Alias, 
Client_Service_Manager__r.Alias = $User.Alias
), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>