force-app/main/default/objects/Opportunity/fields/Needs_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Needs_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Insurance</label>
    <type>Checkbox</type>
</CustomField>