force-app/main/default/objects/Opportunity/fields/Next_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Next_Anniversary__c</fullName>
    <formula>date(year(today()),month( Go_Live_Date__c ),DAY(Go_Live_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Anniversary</label>
    <type>Date</type>
</CustomField>