force-app/main/default/objects/Opportunity/fields/No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees__c</fullName>
    <formula>Account.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>