force-app/main/default/objects/Opportunity/fields/Number_of_Agents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Agents__c</fullName>
    <label>Number of Agents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>