force-app/main/default/objects/Opportunity/fields/Number_of_Contact_Emails__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contact_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Contact Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>