force-app/main/default/objects/Opportunity/fields/Number_of_Contact_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contact_Referrals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Contact Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>