force-app/main/default/objects/Opportunity/fields/Number_of_Offices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Offices__c</fullName>
    <label>Number of Offices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>