force-app/main/default/objects/Opportunity/fields/Number_Of_Service_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Service_Members__c</fullName>
    <label>Number Of Service Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>