force-app/main/default/objects/Opportunity/fields/Number_of_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Team_Members__c</fullName>
    <description>How many team members are on this sub team</description>
    <label>Number of Team Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>