force-app/main/default/objects/Opportunity/fields/of_Agents__c.field-meta.xml
<CustomField>
    <fullName>of_Agents__c</fullName>
    <label># of Agents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>