force-app/main/default/objects/Opportunity/fields/of_Phases_Active__c.field-meta.xml
<CustomField>
    <fullName>of_Phases_Active__c</fullName>
    <label># of Phases Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>