force-app/main/default/objects/Opportunity/fields/of_Phases_In_Construction__c.field-meta.xml
<CustomField>
    <fullName>of_Phases_In_Construction__c</fullName>
    <label># of Phases In Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>