force-app/main/default/objects/Opportunity/fields/of_Units_Remaining__c.field-meta.xml
<CustomField>
    <fullName>of_Units_Remaining__c</fullName>
    <label># of Units Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>