force-app/main/default/objects/Opportunity/fields/Onsites1__c.field-meta.xml
<CustomField>
    <fullName>Onsites1__c</fullName>
    <label>Onsites</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>