force-app/main/default/objects/Opportunity/fields/Onsites__c.field-meta.xml
<CustomField>
    <fullName>Onsites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsites</label>
    <type>Checkbox</type>
</CustomField>