force-app/main/default/objects/Opportunity/fields/Onsites_Details__c.field-meta.xml
<CustomField>
    <fullName>Onsites_Details__c</fullName>
    <label>Onsites Details</label>
    <type>TextArea</type>
</CustomField>