force-app/main/default/objects/Opportunity/fields/OPP_Business_Days_In_the_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>OPP_Business_Days_In_the_Current_Month__c</fullName>
    <formula>(5 * ( FLOOR( ( DATE(YEAR(TODAY()),MONTH(TODAY()),
(IF(
MONTH(TODAY())= 12,
DATE(YEAR(TODAY()), 12, 31) - TODAY(),
DATE(YEAR(TODAY()),
MONTH(TODAY()) + 1, 1) - TODAY() - 1) +
DAY(TODAY())) ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(YEAR(TODAY()),MONTH(TODAY()),
(IF(
MONTH(TODAY())= 12,
DATE(YEAR(TODAY()), 12, 31) - TODAY(),
DATE(YEAR(TODAY()),
MONTH(TODAY()) + 1, 1) - TODAY() - 1) +
DAY(TODAY())) ) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATE(YEAR(TODAY()),MONTH(TODAY()), 1 ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(YEAR(TODAY()),MONTH(TODAY()), 1 ) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP: Business Days In the Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>