force-app/main/default/objects/Opportunity/fields/Opportunity_Funded__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Funded</label>
    <type>Checkbox</type>
</CustomField>