force-app/main/default/objects/Opportunity/fields/Opportunity_Overview__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Overview__c</fullName>
    <description>Description of the scope of our opportunity with this partner.</description>
    <label>Opportunity Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>