force-app/main/default/objects/Opportunity/fields/Opportunity_Size__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Size__c</fullName>
    <label>Opportunity Size</label>
    <length>25</length>
    <type>Text</type>
</CustomField>