force-app/main/default/objects/Opportunity/fields/Orientation_New_Hire__c.field-meta.xml
<CustomField>
    <fullName>Orientation_New_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation/New Hire</label>
    <type>Checkbox</type>
</CustomField>