force-app/main/default/objects/Opportunity/fields/Other_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Other_Third_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account, for Relo Oppty</description>
    <label>Other Third Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relo Management Company</relationshipLabel>
    <relationshipName>ReloManagementCompany</relationshipName>
    <type>Lookup</type>
</CustomField>