force-app/main/default/objects/Opportunity/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>When Status  = &quot;Prospect&quot; then Owner is AE ELSE Owner is AM</description>
    <formula>IF(ISPICKVAL(StageName,&quot;Prospect&quot;),Account_Executive__r.FirstName &amp; &quot; &quot; &amp;  Account_Executive__r.LastName, Account_Manager__r.FirstName &amp; &quot; &quot; &amp;  Account_Manager__r.LastName  )</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>