force-app/main/default/objects/Opportunity/fields/Partner_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Attributes__c</fullName>
    <label>Partner Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lump Sum Only</fullName>
            </value>
            <value>
                <fullName>No Benefits</fullName>
            </value>
            <value>
                <fullName>Counselor Sends Leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>