force-app/main/default/objects/Opportunity/fields/Partner_Gift_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Partner_Gift_Restrictions__c</fullName>
    <formula>Account.Partner_Gift_Restrictions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Gift Restrictions</label>
    <type>Text</type>
</CustomField>