force-app/main/default/objects/Opportunity/fields/Partner_Gift_Sent__c.field-meta.xml
<CustomField>
    <fullName>Partner_Gift_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Gift</label>
    <type>Checkbox</type>
</CustomField>