force-app/main/default/objects/Opportunity/fields/Partner_Gift_Sent_Details__c.field-meta.xml
<CustomField>
    <fullName>Partner_Gift_Sent_Details__c</fullName>
    <label>Partner Gift Details</label>
    <type>TextArea</type>
</CustomField>