force-app/main/default/objects/Opportunity/fields/Partner_is_in_RFP_Phase__c.field-meta.xml
<CustomField>
    <fullName>Partner_is_in_RFP_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Is in Of RFP Phase</label>
    <type>Checkbox</type>
</CustomField>