force-app/main/default/objects/Opportunity/fields/Partner_Is_Out_Of_RFP_Phase__c.field-meta.xml
<CustomField>
    <fullName>Partner_Is_Out_Of_RFP_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Is Out Of RFP Phase</label>
    <type>Checkbox</type>
</CustomField>