force-app/main/default/objects/Opportunity/fields/Partner_Real_Estate_Agency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Real_Estate_Agency__c</fullName>
    <label>Partner Real Estate Agency</label>
    <type>TextArea</type>
</CustomField>