force-app/main/default/objects/Opportunity/fields/Partner_Services__c.field-meta.xml
<CustomField>
    <fullName>Partner_Services__c</fullName>
    <label>Program Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Bill</fullName>
            </value>
            <value>
                <fullName>Expat Mortgage</fullName>
            </value>
            <value>
                <fullName>Expat Services</fullName>
            </value>
            <value>
                <fullName>Mortgage Subsidy</fullName>
            </value>
            <value>
                <fullName>Wire to Closing</fullName>
            </value>
            <value>
                <fullName>Corporate 2nd&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>