force-app/main/default/objects/Opportunity/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <inlineHelpText>Time until Active
Tier 1: 0-6 months
Tier 2: 6-12 months
Tier 3: 12-24 months
Tier 4: No information</inlineHelpText>
    <label>Partner Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>