force-app/main/default/objects/Opportunity/fields/Partnership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Start_Date__c</fullName>
    <label>Partnership Start Date</label>
    <type>Date</type>
</CustomField>