force-app/main/default/objects/Opportunity/fields/PDF_Blurb__c.field-meta.xml
<CustomField>
    <fullName>PDF_Blurb__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the partner require their communications to be sent as a PDF?</inlineHelpText>
    <label>PDF Blurb</label>
    <type>Checkbox</type>
</CustomField>