force-app/main/default/objects/Opportunity/fields/PDF_Blurb_Details__c.field-meta.xml
<CustomField>
    <fullName>PDF_Blurb_Details__c</fullName>
    <label>PDF Blurb Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>