force-app/main/default/objects/Opportunity/fields/PDF_Blurb_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PDF_Blurb_Frequency__c</fullName>
    <label>PDF Blurb Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>