force-app/main/default/objects/Opportunity/fields/PostalCodeLookup__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip/Postal Code Lookup</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_PostalCode</relationshipName>
    <type>Lookup</type>
</CustomField>