force-app/main/default/objects/Opportunity/fields/Pre_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Approval Completed</label>
    <type>Checkbox</type>
</CustomField>