force-app/main/default/objects/Opportunity/fields/Pre_Sale_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sale_Percentage__c</fullName>
    <label>Pre-Sale Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>