force-app/main/default/objects/Opportunity/fields/Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Date__c</fullName>
    <description>Select the date presenting to Contact</description>
    <label>Presentation Date</label>
    <type>Date</type>
</CustomField>